k8s/waf-syslog-receiver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waf-syslog-receiver
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waf-syslog-receiver
  template:
    metadata:
      labels:
        app: waf-syslog-receiver
    spec:
      containers:
      - name: syslog
        image: artifactory.f5net.com/f5-positron-docker/testing-utils:v0.6.0
        command: ["/bin/bash", "-c"]
        args:
        - |
          [...]
        ports:
        - containerPort: 5514
---
apiVersion: v1
kind: Service
metadata:
  name: waf-syslog-receiver
  namespace: default
spec:
  selector:
    app: waf-syslog-receiver
  ports:
  - port: 5514
    targetPort: 5514
